# rust_task_saas

./: .gitignore  Cargo.toml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/handlers/: auth.rs
apps/api/src/models/: auth.rs
apps/api/src/routes/: auth.rs
apps/api/src/utils/: password.rs
migrations/: 20260515104839_init_schema.sql
